unpackaged/main/default/objects/loan__Repayment_Schedule__c/loan__Repayment_Schedule__c.object-meta.xml
<CustomObject>
    <description>Amortization schedule is also called as Repayment schedule.</description>
    <label>Amortization Schedule</label>
    <nameField>
        <displayFormat>RSI-{0000000000}</displayFormat>
        <label>Repayment Schedule ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Amortization Schedule</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>