unpackaged/main/default/objects/loan__Repayment_Schedule__c/fields/isBilledwasUnchecked__c.field-meta.xml
<CustomField>
    <fullName>isBilledwasUnchecked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isBilledwasUnchecked</label>
    <type>Checkbox</type>
</CustomField>