unpackaged/main/default/objects/loan__Repayment_Schedule__c/fields/loan__Balance__c.field-meta.xml
<CustomField>
    <fullName>loan__Balance__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Principal Balance</description>
    <inlineHelpText>Principal Balance</inlineHelpText>
    <label>Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>