unpackaged/main/default/objects/loan__Repayment_Schedule__c/fields/loan__Barcode_Subtype__c.field-meta.xml
<CustomField>
    <fullName>loan__Barcode_Subtype__c</fullName>
    <label>Barcode Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>loan__Barcode_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>128A</fullName>
            </value>
            <value>
                <fullName>128B</fullName>
            </value>
            <value>
                <fullName>128C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>