unpackaged/main/default/objects/loan__Repayment_Schedule__c/fields/loan__Barcode_Type__c.field-meta.xml
<CustomField>
    <fullName>loan__Barcode_Type__c</fullName>
    <label>Barcode Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Code128</fullName>
                <default>true</default>
                <label>Code128</label>
            </value>
            <value>
                <fullName>code39</fullName>
            </value>
            <value>
                <fullName>ean13</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>