unpackaged/main/default/objects/loan__Repayment_Schedule__c/fields/loan__Date_Paid__c.field-meta.xml
<CustomField>
    <fullName>loan__Date_Paid__c</fullName>
    <description>Date paid</description>
    <inlineHelpText>Date paid</inlineHelpText>
    <label>Date Paid</label>
    <type>Date</type>
</CustomField>