unpackaged/main/default/objects/loan__Repayment_Schedule__c/fields/loan__Due_Amount__c.field-meta.xml
<CustomField>
    <fullName>loan__Due_Amount__c</fullName>
    <label>Due_Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>