unpackaged/main/default/objects/loan__Repayment_Schedule__c/fields/loan__Due_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Due_Date__c</fullName>
    <description>Due date</description>
    <inlineHelpText>The date on which the loan payment is due.</inlineHelpText>
    <label>Due Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>