unpackaged/main/default/objects/loan__Repayment_Schedule__c/fields/loan__Due_Fee1__c.field-meta.xml
<CustomField>
    <fullName>loan__Due_Fee1__c</fullName>
    <description>This field will represent the fee component of repayment schedules.</description>
    <inlineHelpText>This field will represent the fee component of repayment schedules.</inlineHelpText>
    <label>Due Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>