unpackaged/main/default/objects/loan__Repayment_Schedule__c/fields/loan__Due_Interest__c.field-meta.xml
<CustomField>
    <fullName>loan__Due_Interest__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Due Interest</description>
    <inlineHelpText>Due Interest</inlineHelpText>
    <label>Due Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>