unpackaged/main/default/objects/loan__Repayment_Schedule__c/fields/loan__Due_Interest_On_Overdue__c.field-meta.xml
<CustomField>
    <fullName>loan__Due_Interest_On_Overdue__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Due Interest On Overdue Amount</description>
    <inlineHelpText>Due Interest On Overdue Amount</inlineHelpText>
    <label>Due Interest On Overdue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>