unpackaged/main/default/objects/loan__Repayment_Schedule__c/fields/loan__Interest_Rounding_Error__c.field-meta.xml
<CustomField>
    <fullName>loan__Interest_Rounding_Error__c</fullName>
    <description>This field captures interest rounding error in amortization schedules.</description>
    <inlineHelpText>This field captures interest rounding error in amortization schedules.</inlineHelpText>
    <label>Interest Rounding Error</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>