unpackaged/main/default/objects/loan__Repayment_Schedule__c/fields/loan__Is_Archived__c.field-meta.xml
<CustomField>
    <fullName>loan__Is_Archived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if a new repayment schedule for this loan account has been generated and this one is archived for reference.</description>
    <inlineHelpText>Indicates if a new repayment schedule for this loan account has been generated and this one is archived for reference.</inlineHelpText>
    <label>Is Archived</label>
    <type>Checkbox</type>
</CustomField>