unpackaged/main/default/objects/loan__Repayment_Schedule__c/fields/loan__Is_Fee_Posted__c.field-meta.xml
<CustomField>
    <fullName>loan__Is_Fee_Posted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field represents whether the scheduled fee is added to charge.</description>
    <inlineHelpText>This field represents whether the scheduled fee is added to charge.</inlineHelpText>
    <label>Is Fee Posted</label>
    <type>Checkbox</type>
</CustomField>