unpackaged/main/default/objects/loan__Repayment_Schedule__c/fields/loan__Is_Partially_Paid__c.field-meta.xml
<CustomField>
    <fullName>loan__Is_Partially_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this scheduled installment is only partially paid.</description>
    <inlineHelpText>Indicates if this scheduled installment is only partially paid.</inlineHelpText>
    <label>Is Partially Paid</label>
    <type>Checkbox</type>
</CustomField>