unpackaged/main/default/objects/loan__Repayment_Schedule__c/fields/loan__Is_Posted__c.field-meta.xml
<CustomField>
    <fullName>loan__Is_Posted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>System mark this field as checked when Regular IPT is created for this record in Flexible Amz Contracts.</description>
    <label>Is Posted</label>
    <type>Checkbox</type>
</CustomField>