unpackaged/main/default/objects/loan__Repayment_Schedule__c/fields/loan__isPaid__c.field-meta.xml
<CustomField>
    <fullName>loan__isPaid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the scheduled payment is/was completely paid</description>
    <inlineHelpText>Checked if the scheduled payment is/was completely paid</inlineHelpText>
    <label>Is Paid</label>
    <type>Checkbox</type>
</CustomField>