unpackaged/main/default/objects/loan__Repayment_Schedule__c/fields/loan__Loan_Account__c.field-meta.xml
<CustomField>
    <fullName>loan__Loan_Account__c</fullName>
    <description>Repayment Schedule of which Loan account</description>
    <inlineHelpText>Repayment Schedule of which Loan account</inlineHelpText>
    <label>Loan Account</label>
    <referenceTo>loan__Loan_Account__c</referenceTo>
    <relationshipName>Repayment_Schedule</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>