unpackaged/main/default/objects/loan__Repayment_Schedule__c/fields/loan__Loan_Disbursal_Transaction__c.field-meta.xml
<CustomField>
    <fullName>loan__Loan_Disbursal_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Repayment Schedule Record of which LDT</description>
    <inlineHelpText>This field is used only in case of FIT (Fund in Tranches) Loans. Every disbursal re-generates repayment schedule, this field keeps track of parent disbursal due to which record is created.</inlineHelpText>
    <label>Loan Disbursal Transaction</label>
    <referenceTo>loan__Loan_Disbursal_Transaction__c</referenceTo>
    <relationshipName>Loan_Disbursal_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>