unpackaged/main/default/objects/loan__Repayment_Schedule__c/fields/loan__Paid_Fees__c.field-meta.xml
<CustomField>
    <fullName>loan__Paid_Fees__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Paid Fees</description>
    <inlineHelpText>Paid Fees</inlineHelpText>
    <label>Paid Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>