unpackaged/main/default/objects/loan__Repayment_Schedule__c/fields/loan__Paid_Interest__c.field-meta.xml
<CustomField>
    <fullName>loan__Paid_Interest__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Paid Interest</description>
    <inlineHelpText>Paid Interest</inlineHelpText>
    <label>Paid Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>