unpackaged/main/default/objects/loan__Repayment_Schedule__c/fields/loan__Paid_Principal__c.field-meta.xml
<CustomField>
    <fullName>loan__Paid_Principal__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Paid Principal</description>
    <inlineHelpText>Paid Principal</inlineHelpText>
    <label>Paid Principal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>