unpackaged/main/default/objects/loan__Repayment_Schedule__c/fields/loan__Paid_Total__c.field-meta.xml
<CustomField>
    <fullName>loan__Paid_Total__c</fullName>
    <formula>loan__Total_Paid_Fees__c +  loan__Paid_Interest__c +  loan__Paid_Principal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paid Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>