unpackaged/main/default/objects/loan__Repayment_Schedule__c/fields/loan__Past_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Past_Due_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Past Due Date</label>
    <type>Checkbox</type>
</CustomField>