unpackaged/main/default/objects/loan__Repayment_Schedule__c/fields/loan__TDS_Amount__c.field-meta.xml
<CustomField>
    <fullName>loan__TDS_Amount__c</fullName>
    <description>Total TDS Amount Due</description>
    <label>TDS Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>