unpackaged/main/default/objects/loan__Repayment_Schedule__c/fields/loan__TDS_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>loan__TDS_Amount_Paid__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total TDS Paid</description>
    <label>TDS Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>