unpackaged/main/default/objects/loan__Repayment_Schedule__c/fields/loan__Total_Due_Fees__c.field-meta.xml
<CustomField>
    <fullName>loan__Total_Due_Fees__c</fullName>
    <inlineHelpText>Sum of all the fees that is due for each installment</inlineHelpText>
    <label>Total Due Fees</label>
    <summarizedField>loan__Due_Fee__c.loan__Due_Fee_Amount__c</summarizedField>
    <summaryForeignKey>loan__Due_Fee__c.loan__Repayment_Schedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>