unpackaged/main/default/objects/loan__Repayment_Schedule__c/fields/loan__Total_Installment__c.field-meta.xml
<CustomField>
    <fullName>loan__Total_Installment__c</fullName>
    <formula>loan__Due_Principal__c + loan__Due_Interest__c + loan__Total_Due_Fees__c +  loan__Due_Interest_On_Overdue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Installment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>