unpackaged/main/default/objects/loan__Repayment_Schedule__c/fields/loan__Total_Paid_Fees__c.field-meta.xml
<CustomField>
    <fullName>loan__Total_Paid_Fees__c</fullName>
    <label>Total Paid Fees</label>
    <summarizedField>loan__Paid_Fee__c.loan__Paid_Fee_Amount__c</summarizedField>
    <summaryForeignKey>loan__Paid_Fee__c.loan__Repayment_Schedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>