unpackaged/main/default/objects/loan__Repayment_Schedule__c/fields/loan__Transaction_Amount__c.field-meta.xml
<CustomField>
    <fullName>loan__Transaction_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This represents the amount paid by the borrower towards this repayment schedule.</description>
    <inlineHelpText>This represents the amount paid by the borrower towards this repayment schedule.</inlineHelpText>
    <label>Transaction Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>