unpackaged/main/default/objects/loan__Repayment_Schedule__c/fields/loan__Unpaid_Fees__c.field-meta.xml
<CustomField>
    <fullName>loan__Unpaid_Fees__c</fullName>
    <formula>loan__Total_Due_Fees__c - loan__Total_Paid_Fees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unpaid Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>