unpackaged/main/default/objects/loan__Repayment_Schedule__c/fields/loan__Unpaid_Installment__c.field-meta.xml
<CustomField>
    <fullName>loan__Unpaid_Installment__c</fullName>
    <formula>loan__Unpaid_Principal__c + loan__Unpaid_Interest__c + loan__Unpaid_Fees__c + loan__Unpaid_Overdue_Interest__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unpaid Installment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>