unpackaged/main/default/objects/loan__Repayment_Schedule__c/fields/loan__Unpaid_Interest__c.field-meta.xml
<CustomField>
    <fullName>loan__Unpaid_Interest__c</fullName>
    <formula>loan__Due_Interest__c  -  loan__Paid_Interest__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unpaid Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>