unpackaged/main/default/objects/loan__Repayment_Schedule__c/fields/loan__Unpaid_Principal__c.field-meta.xml
<CustomField>
    <fullName>loan__Unpaid_Principal__c</fullName>
    <formula>loan__Due_Principal__c - loan__Paid_Principal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unpaid Principal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>