unpackaged/main/default/objects/loan__Repayment_Schedule__c/fields/loan__Waived_Interest__c.field-meta.xml
<CustomField>
    <fullName>loan__Waived_Interest__c</fullName>
    <label>Waived Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>